...
                            .frame(maxWidth: .infinity, alignment: .leading)
                    }
                    VStack(spacing: 2) {
                        NumberField("Enter Amount", text: $transaction.amount)
                            .onChange(of: transaction.amount, perform: handleAmountChange)
                            .focused($focusedState, equals: .amount)
                            .accessibilityIdentifier("transferAmountField")

                        if isClient {
                            Text(transactionSavings != nil ? "Save RWF \(transactionSavings!) using Dialer Splits" : "")
                                .foregroundStyle(smartGradient)
                                .font(.callout)
                                .frame(maxWidth: .infinity, alignment: .leading)
...
                            ? "Enter Receiver's number"
                            : "Enter Merchant Code",
                            text: $transaction.number.animation())
                        .onChange(of: transaction.number, perform: handleNumberField)
                        .focused($focusedState, equals: .number)
                        .modifier(ShakeEffect(animatableData: CGFloat(isShakingNumberField ? 1 : 0)))
                        .accessibilityIdentifier("transferNumberField")

                        Button(action: {
                            if isClient {
                                hideKeyboard()
                                presentedSheet = .contacts
                                Tracker.shared.logEvent(.contactsOpened)
...
                }
            }
            ToolbarItem(placement: .topBarTrailing) {
                Button(action: switchPaymentType) {
                    HStack {
                        Image(systemName:  "arrow.left.arrow.right.circle")
                        Text(isClient ? "Pay Merchant" : "Send Money")
                    }
                    .font(.system(size: 18, design: .rounded))
                    .foregroundStyle(.blue)
                    .padding(5)
                }
                .fixedSize()
...
