...
                            .shadow(color: .darkShadow, radius: 6, x: 6, y: 6)
                        }                 }

                    HStack {
                        if UIApplication.hasSupportForUSSD {
                            Button(action: transferMoney) {
                                Text("Dial USSD")
                                    .font(.subheadline.bold())
                                    .frame(maxWidth: .infinity)
                                    .frame(height: 48)
                                    .background(Color.blue.opacity(transaction.isValid ? 1 : 0.3))
                                    .cornerRadius(8)
                                    .foregroundColor(Color.white)
...
